// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`func_inside_attr.js format 1`] = `
====================================options=====================================
parsers: ["flow", "babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<bar x={function (x): Array<string> {}} />

=====================================output=====================================
<bar x={function (x): Array<string> {}} />;

================================================================================
`;

exports[`return_type.js format 1`] = `
====================================options=====================================
parsers: ["flow", "babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const fail = (): X => <x />;

=====================================output=====================================
const fail = (): X => <x />;

================================================================================
`;
